--- a/element/manifest.json
+++ b/element/manifest.json
@@ -3,13 +3,16 @@
     "manifest_version": 1,
     "name": "fsc-news",
     "version_name": "1.0",
-    "version_number": 1,
+    "version_number": 3,
     "sizing": "fit_content",
     "initial_height": 300,
     "initial_width": 300,
     "js_files": [
         "dist/element.js"
     ],
+    "csp_sources": {
+        "connect_srcs": ["https://api.cognitive.microsoft.com", "https://www.alphavantage.co"]
+    },
     "css_files": [
         "dist/element.css"
     ]
