--- a/element/manifest.json
+++ b/element/manifest.json
@@ -3,7 +3,7 @@
     "manifest_version": 1,
     "name": "fsc-news",
     "version_name": "1.0",
-    "version_number": 3,
+    "version_number": 5,
     "sizing": "fit_content",
     "initial_height": 400,
     "initial_width": 400,
@@ -11,7 +11,7 @@
         "dist/element.js"
     ],
     "csp_sources": {
-        "connect_srcs": ["https://api.cognitive.microsoft.com", "https://www.alphavantage.co"]
+        "connect_srcs": ["https://api.cognitive.microsoft.com", "https://www.alphavantage.co", "https://aaiu-dev-ed.my.salesforce.com"]
     },
     "css_files": [
         "dist/element.css"
